# mini-pupper-aws

./: .gitignore  .gitmodules  Dockerfile-Base  Dockerfile-Robot  Dockerfile-Simulation  Makefile  README.md  aws_iot_params.yaml
greengrass/: aws_iot_params.yaml.template  docker-compose.yaml  recipe.yaml.template
robot_ws/src/aws_iot_mqtt_bridge/launch/: aws_iot_bridge.launch
robot_ws/src/mini_pupper/launch/: bringup.launch
robot_ws/src/mini_pupper/scripts/: dance.py  dance_configs.py  pose_controller.py
robot_ws/src/mini_pupper_dance/: CMakeLists.txt
robot_ws/src/mini_pupper_dance/launch/: dance.launch
robot_ws/src/mini_pupper_dance/scripts/: dance.py  pose_controller.py
robot_ws/src/mini_pupper_description/config/: joint_names_mini_pupper_description.yaml
robot_ws/src/mini_pupper_description/meshes/: lb1.STL  lb2.STL  lb3.STL  lbfoot.STL  lf1.STL  lf2.STL  lf3.STL  lffoot.STL  rb1.STL  rb2.STL  rb3.STL  rbfoot.STL  rf1.STL  rf2.STL  rf3.STL  rffoot.STL  yellow_plate_on_base_link.STL  yellow_plate_on_lb1.STL  yellow_plate_on_lb2.STL  yellow_plate_on_lf1.STL  yellow_plate_on_lf2.STL  yellow_plate_on_rb1.STL  yellow_plate_on_rb2.STL  yellow_plate_on_rf1.STL  yellow_plate_on_rf2.STL
robot_ws/src/mini_pupper_music/: CMakeLists.txt  package.xml
robot_ws/src/servo_interface/: CMakeLists.txt
robot_ws/src/servo_interface/scripts/: calibrate.py
scripts/: check-greengrass.sh  simulation-entrypoint.sh  wifi.sh
simulation_ws/src/mini_pupper_simulation/: CMakeLists.txt  package.xml
templates/: aws_iot_params.yaml  docker-compose.yml
(+18 files in other folders)
